Swagger Step 3 - Address
